wandb/run-20240311_172457-1dh2maet/files/output.log
Nr of Trainable Params on cuda:   99009
> /home/christina/Documents/climsim_ds/optimization/trainer_stdiff.py(88)trainer()
-> out = model.forward(x=x_past)
  0%|                                                                                                                         | 0/18627 [00:00<?, ?it/s]
*** RuntimeError: Given groups=1, weight of size [32, 2, 3, 3, 3], expected input[1, 16, 2, 32, 64] to have 2 channels, but got 16 channels instead
torch.Size([16, 1, 2, 32, 64])
*** ValueError: not enough values to unpack (expected 5, got 4)
*** SyntaxError: invalid syntax
*** NameError: name 'cear' is not defined
  0%|                                                                                                                         | 0/18627 [00:43<?, ?it/s]
Traceback (most recent call last):
  File "/home/christina/Documents/climsim_ds/main.py", line 354, in <module>
    main(args)
  File "/home/christina/Documents/climsim_ds/main.py", line 153, in main
    trainer_stdiff.trainer(args=args, train_loader=train_loader,
  File "/home/christina/Documents/climsim_ds/optimization/trainer_stdiff.py", line 88, in trainer
    out = model.forward(x=x_past.squeeze(1))
          ^^^^^
  File "/home/christina/anaconda3/envs/stflow/lib/python3.11/bdb.py", line 90, in trace_dispatch
    return self.dispatch_line(frame)
           ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/christina/anaconda3/envs/stflow/lib/python3.11/bdb.py", line 115, in dispatch_line
    if self.quitting: raise BdbQuit
                      ^^^^^^^^^^^^^
bdb.BdbQuit
Traceback (most recent call last):
  File "/home/christina/Documents/climsim_ds/main.py", line 354, in <module>
    main(args)
  File "/home/christina/Documents/climsim_ds/main.py", line 153, in main
    trainer_stdiff.trainer(args=args, train_loader=train_loader,
  File "/home/christina/Documents/climsim_ds/optimization/trainer_stdiff.py", line 88, in trainer
    out = model.forward(x=x_past.squeeze(1))
          ^^^^^
  File "/home/christina/anaconda3/envs/stflow/lib/python3.11/bdb.py", line 90, in trace_dispatch
    return self.dispatch_line(frame)
           ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/christina/anaconda3/envs/stflow/lib/python3.11/bdb.py", line 115, in dispatch_line
    if self.quitting: raise BdbQuit
                      ^^^^^^^^^^^^^
bdb.BdbQuit